# bevy-console

./: .gitignore  Cargo.toml  LICENSE  README.md  run_all_examples.sh  wsl.env  wsl.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  release.yaml
bevy_console_derive/: Cargo.toml
bevy_console_derive/src/: lib.rs
bevy_console_parser/: Cargo.toml
bevy_console_parser/src/: lib.rs  parse.rs  value.rs
examples/: basic.rs  basic_example.rs  bigger_example.rs  capture_bevy_logs.rs  change_console_key.rs  completions.rs  log_command.rs  next.rs  raw_commands.rs  write_to_console.rs
src/: color.rs  command_result.rs  console.rs  error.rs  lib.rs  log.rs  macros.rs  value.rs
src/commands/: clear.rs  exit.rs  help.rs  mod.rs
