[package]
name = "bevy_console"
version = "0.12.0"
edition = "2021"
authors = ["RichoDemus <git@richodemus.com>"]
homepage = "https://github.com/RichoDemus/bevy-console"
repository = "https://github.com/RichoDemus/bevy-console"
description = "dev console for bevy"
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.14", default-features = false }
clap = { version = "4.5", features = ["derive"] }
bevy_console_derive = { path = "./bevy_console_derive", version = "0.5.0" }
bevy_egui = "0.28.0"
shlex = "1.3"

[dev-dependencies]
bevy = "0.14"

[workspace]
members = ["bevy_console_derive"]
