[package]
name = "bevy_console"
version = "0.12.0"
edition = "2021"
authors = ["RichoDemus <git@richodemus.com>"]
homepage = "https://github.com/RichoDemus/bevy-console"
repository = "https://github.com/RichoDemus/bevy-console"
description = "dev console for bevy"
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.14", default-features = false }
clap = { version = "4.5", features = ["derive", "color", "help"] }
bevy_console_derive = { path = "./bevy_console_derive", version = "0.5.0" }
bevy_egui = "0.29.0"
shlex = "1.3"
ansi-parser = "0.9"
strip-ansi-escapes = "0.2"

[dev-dependencies]
bevy = { version = "0.14" }
color-print = { version = "0.3" }

[workspace]
members = ["bevy_console_derive"]
