[package]
name = "bevy_console"
version = "0.14.0"
edition = "2021"
authors = ["RichoDemus <git@richodemus.com>"]
homepage = "https://github.com/RichoDemus/bevy-console"
repository = "https://github.com/RichoDemus/bevy-console"
description = "dev console for bevy"
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "bevy_log",
] }
clap = { version = "4.5", features = ["derive"] }
bevy_console_derive = { path = "./bevy_console_derive", version = "0.5.0" }
bevy_egui = { version = "0.34", default-features = false, features = [ "render", "default_fonts" ] }
shlex = "1.3"
ansi-parser = "0.9"
strip-ansi-escapes = "0.2"
trie-rs = "0.2"

[dev-dependencies]
bevy = { version = "0.16", features = ["std", "bevy_log"] }
color-print = { version = "0.3" }


[workspace]
members = ["bevy_console_derive"]
